[package]
name = "tiro"
version = "0.1.0"
authors = ["Usairim Isani <usairim.isani@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evmap = "10.0.2"

futures = "0.3"

rayon = "1.5.0"

tokio = { version = "1", features = ["full"] }