[package]
name = "tiro"
version = "0.1.0"
authors = ["Usairim Isani <usairim.isani@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "2.0.0" }
anyhow = "1.0.38"

async-trait = "0.1.42"

evmap = "10.0.2"

futures = { version = "0.3", features = [ "bilock", "unstable" ] }

indexmap = "1.6.1"

num-traits = "0.2"

rayon = "1.5.0"
rand = "0.8.1"

tokio = { version = "1", features = ["full"] }

serde_json = "1.0.61"